# Learning_Python

./: .gitignore  README.md
Class_Toyota/: main.py  (+1 more)
HW-16_Flask_Practice/: .dockerignore  .env .exapmle  .flaskenv  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
HW-16_Flask_Practice/app/: __init__.py  utils.py
HW-16_Flask_Practice/app/controllers/: __init__.py  employees.py
HW-16_Flask_Practice/app/forms/: __init__.py  auth.py  company.py  employee.py
HW-16_Flask_Practice/app/models/: __init__.py  company.py  employee.py  user.py  utils.py
HW-16_Flask_Practice/app/static/css/: main.css
HW-16_Flask_Practice/app/templates/: about.html  base.html  index.html
HW-16_Flask_Practice/app/templates/auth/: password_change.html  profile.html  register.html  reset_password.html
HW-16_Flask_Practice/app/templates/common/: footer.html  header.html
HW-16_Flask_Practice/app/templates/company/: add_company.html
HW-16_Flask_Practice/app/templates/employee/: add_employee.html  employees.html  staff.html
HW-16_Flask_Practice/app/templates/upload/: file.html
HW-16_Flask_Practice/app/views/: __init__.py  auth.py  company.py  employee.py  main.py  upload.py
HW-16_Flask_Practice/docker/: Dockerfile
HW-16_Flask_Practice/migrations/versions/: 06165713417e_.py  2a12e6dbcebe_.py  3d33fc104a6d_.py  4b0c7edcecf0_.py  8a4ac322ca1d_.py  919af98055a5_.py  92003a9f7fc7_.py  b6fd56fc5239_.py  bd12cad54c41_.py  c4bb93a0f611_.py  c672bc7cd77d_.py  d07f88fd5862_.py  d8c0582cba35_.py  dcf1c29208c2_.py  fb6f1c17731e_.py  ff8ea63de96b_.py
(+267 files in other folders)
