[tool.poetry]
name = "flask-template"
version = "1"
description = "Simple Flask template"
authors = ["Oleksandr Kozachenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Migrate = "^4.0.0"
flask-sqlalchemy = "^3.0.2"
Flask-Login = "^0.6.2"
psycopg2 = "^2.9.5"
Jinja2 = "^3.1.2"
SQLAlchemy = "^1.4.44"
python-dotenv = "^0.21.0"
email-validator = "^1.3.0"
flask-wtf = "^1.0.1"
werkzeug = "^2.2.2"
click = "^8.1.3"
markupsafe = "^2.1.1"
flask-mail = "^0.9.1"
pydantic = "^1.10.2"
wtforms-sqlalchemy = "^0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
